# TESTBENCH-FORGE

./: .gitignore  CHEATSHEET.md  Dockerfile.hud  README.md  SUBMISSION.md  TRAINING_STATS.md  build_dataset.py  dataset.jsonl  demo.html  demo.py  demo_suites.html  demo_suites.py  env.py  eval_bench.py  eval_results.json  eval_schema.py  external_status.json  families.py  fireworks_baseline.py  fireworks_results.json  grpo_result.json  grpo_rewards.txt  modal_grpo.py  modal_grpo_result.json  pyproject.toml  requirements.txt  reward.py  rft_eval_report.py  run.sh  run_demo.sh  security_checks.py  selftest.py  stage_a_checks.py  suites_heldout.json  testbench.py  train_rl.py
docs/: DEMO_SCRIPT_90s.md  fireworks_rft.md
src/: build_dataset.py  daytona_runner.py  dump_suites.py  env.py  families.py  modal_runner.py  scorer.py  security_checks.py  selftest.py  tasks.py  testbench.py  testbench_eval_protocol.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  data.ts  styles.css
web/src/components/: AnimatedCounter.tsx  AttackList.tsx  KillMeter.tsx  MutantWalk.tsx  RewardCurve.tsx  SuiteDiff.tsx
